@@ -2,8 +2,7 @@
 
 ;; Copyright (C) 2015  Andreas Röhler
 
-;; Author: Andreas Röhler <andreas.roehler@easy-emacs.de>
-
+;; Author: Andreas Röhler <andreas.roehler@online.de>
 ;; Keywords: languages, convenience
 
 ;; This program is free software; you can redistribute it and/or modify
@@ -21,7 +20,11 @@
 
 ;;; Commentary:
 
+;; This file is generated by function from python-mode-utils.el - see in
+;; directory devel. Edits here might not be persistent.
+
 ;;; Code:
+
 
 (defalias 'py-shift-region-left 'py-shift-left)
 (defun py-shift-left (&optional count start end)
@@ -30,7 +33,6 @@
 If no region is active, current line is dedented.
 Returns indentation reached. "
   (interactive "p")
-  (setq count (or count 1))
   (let ((erg (py--shift-intern (- count) start end)))
     (when (and (called-interactively-p 'any) py-verbose-p) (message "%s" erg))
     erg))
@@ -42,7 +44,6 @@ Returns indentation reached. "
 If no region is active, current line is indented.
 Returns indentation reached. "
   (interactive "p")
-  (setq count (or count 1))
   (let ((erg (py--shift-intern count beg end)))
     (when (and (called-interactively-p 'any) py-verbose-p) (message "%s" erg))
     erg))
@@ -75,8 +76,8 @@ Returns indentation reached. "
     (py-indentation-of-statement)))
 
 (defun py--shift-forms-base (form arg &optional beg end)
-  (let* ((begform (intern-soft (concat "py-beginning-of-" form)))
-         (endform (intern-soft (concat "py-end-of-" form)))
+  (let* ((begform (intern-soft (concat "py-backward-" form)))
+         (endform (intern-soft (concat "py-forward-" form)))
          (orig (copy-marker (point)))
          (beg (cond (beg)
                     ((region-active-p)
@@ -94,30 +95,6 @@ Returns indentation reached. "
     (goto-char orig)
     erg))
 
-(defun py-shift-paragraph-right (&optional arg)
-  "Indent paragraph by COUNT spaces.
-
-COUNT defaults to `py-indent-offset',
-use \[universal-argument] to specify a different value.
-
-Returns outmost indentation reached. "
-  (interactive "*P")
-  (let ((erg (py--shift-forms-base "paragraph" (or arg py-indent-offset))))
-        (when (called-interactively-p 'any) (message "%s" erg))
-    erg))
-
-(defun py-shift-paragraph-left (&optional arg)
-  "Dedent paragraph by COUNT spaces.
-
-COUNT defaults to `py-indent-offset',
-use \[universal-argument] to specify a different value.
-
-Returns outmost indentation reached. "
-  (interactive "*P")
-  (let ((erg (py--shift-forms-base "paragraph" (- (or arg py-indent-offset)))))
-    (when (called-interactively-p 'any) (message "%s" erg))
-    erg))
-
 (defun py-shift-block-right (&optional arg)
   "Indent block by COUNT spaces.
 
@@ -127,7 +104,7 @@ use \[universal-argument] to specify a different value.
 Returns outmost indentation reached. "
   (interactive "*P")
   (let ((erg (py--shift-forms-base "block" (or arg py-indent-offset))))
-    (when (called-interactively-p 'any) (message "%s" erg))
+        (when (called-interactively-p 'any) (message "%s" erg))
     erg))
 
 (defun py-shift-block-left (&optional arg)
@@ -139,56 +116,6 @@ use \[universal-argument] to specify a different value.
 Returns outmost indentation reached. "
   (interactive "*P")
   (let ((erg (py--shift-forms-base "block" (- (or arg py-indent-offset)))))
-    (when (called-interactively-p 'any) (message "%s" erg))
-    erg))
-
-(defun py-shift-minor-block-left (&optional arg)
-  "Dedent minor-block by COUNT spaces.
-
-COUNT defaults to `py-indent-offset',
-use \[universal-argument] to specify a different value.
-
-Returns outmost indentation reached.
-A minor block is started by a `for', `if', `try' or `with'. "
-  (interactive "*P")
-  (let ((erg (py--shift-forms-base "minor-block" (- (or arg py-indent-offset)))))
-    (when (called-interactively-p 'any) (message "%s" erg))
-    erg))
-
-(defun py-shift-minor-block-right (&optional arg)
-  "Indent minor-block by COUNT spaces.
-
-COUNT defaults to `py-indent-offset',
-use \[universal-argument] to specify a different value.
-
-Returns outmost indentation reached.
-A minor block is started by a `for', `if', `try' or `with'. "
-  (interactive "*P")
-  (let ((erg (py--shift-forms-base "minor-block" (or arg py-indent-offset))))
-        (when (called-interactively-p 'any) (message "%s" erg))
-    erg))
-
-(defun py-shift-clause-right (&optional arg)
-  "Indent clause by COUNT spaces.
-
-COUNT defaults to `py-indent-offset',
-use \[universal-argument] to specify a different value.
-
-Returns outmost indentation reached. "
-  (interactive "*P")
-  (let ((erg (py--shift-forms-base "clause" (or arg py-indent-offset))))
-        (when (called-interactively-p 'any) (message "%s" erg))
-    erg))
-
-(defun py-shift-clause-left (&optional arg)
-  "Dedent clause by COUNT spaces.
-
-COUNT defaults to `py-indent-offset',
-use \[universal-argument] to specify a different value.
-
-Returns outmost indentation reached. "
-  (interactive "*P")
-  (let ((erg (py--shift-forms-base "clause" (- (or arg py-indent-offset)))))
     (when (called-interactively-p 'any) (message "%s" erg))
     erg))
 
@@ -216,30 +143,6 @@ Returns outmost indentation reached. "
     (when (called-interactively-p 'any) (message "%s" erg))
     erg))
 
-(defun py-shift-def-right (&optional arg)
-  "Indent def by COUNT spaces.
-
-COUNT defaults to `py-indent-offset',
-use \[universal-argument] to specify a different value.
-
-Returns outmost indentation reached. "
-  (interactive "*P")
-  (let ((erg (py--shift-forms-base "def" (or arg py-indent-offset))))
-        (when (called-interactively-p 'any) (message "%s" erg))
-    erg))
-
-(defun py-shift-def-left (&optional arg)
-  "Dedent def by COUNT spaces.
-
-COUNT defaults to `py-indent-offset',
-use \[universal-argument] to specify a different value.
-
-Returns outmost indentation reached. "
-  (interactive "*P")
-  (let ((erg (py--shift-forms-base "def" (- (or arg py-indent-offset)))))
-    (when (called-interactively-p 'any) (message "%s" erg))
-    erg))
-
 (defun py-shift-class-right (&optional arg)
   "Indent class by COUNT spaces.
 
@@ -261,6 +164,78 @@ use \[universal-argument] to specify a different value.
 Returns outmost indentation reached. "
   (interactive "*P")
   (let ((erg (py--shift-forms-base "class" (- (or arg py-indent-offset)))))
+    (when (called-interactively-p 'any) (message "%s" erg))
+    erg))
+
+(defun py-shift-clause-right (&optional arg)
+  "Indent clause by COUNT spaces.
+
+COUNT defaults to `py-indent-offset',
+use \[universal-argument] to specify a different value.
+
+Returns outmost indentation reached. "
+  (interactive "*P")
+  (let ((erg (py--shift-forms-base "clause" (or arg py-indent-offset))))
+        (when (called-interactively-p 'any) (message "%s" erg))
+    erg))
+
+(defun py-shift-clause-left (&optional arg)
+  "Dedent clause by COUNT spaces.
+
+COUNT defaults to `py-indent-offset',
+use \[universal-argument] to specify a different value.
+
+Returns outmost indentation reached. "
+  (interactive "*P")
+  (let ((erg (py--shift-forms-base "clause" (- (or arg py-indent-offset)))))
+    (when (called-interactively-p 'any) (message "%s" erg))
+    erg))
+
+(defun py-shift-comment-right (&optional arg)
+  "Indent comment by COUNT spaces.
+
+COUNT defaults to `py-indent-offset',
+use \[universal-argument] to specify a different value.
+
+Returns outmost indentation reached. "
+  (interactive "*P")
+  (let ((erg (py--shift-forms-base "comment" (or arg py-indent-offset))))
+        (when (called-interactively-p 'any) (message "%s" erg))
+    erg))
+
+(defun py-shift-comment-left (&optional arg)
+  "Dedent comment by COUNT spaces.
+
+COUNT defaults to `py-indent-offset',
+use \[universal-argument] to specify a different value.
+
+Returns outmost indentation reached. "
+  (interactive "*P")
+  (let ((erg (py--shift-forms-base "comment" (- (or arg py-indent-offset)))))
+    (when (called-interactively-p 'any) (message "%s" erg))
+    erg))
+
+(defun py-shift-def-right (&optional arg)
+  "Indent def by COUNT spaces.
+
+COUNT defaults to `py-indent-offset',
+use \[universal-argument] to specify a different value.
+
+Returns outmost indentation reached. "
+  (interactive "*P")
+  (let ((erg (py--shift-forms-base "def" (or arg py-indent-offset))))
+        (when (called-interactively-p 'any) (message "%s" erg))
+    erg))
+
+(defun py-shift-def-left (&optional arg)
+  "Dedent def by COUNT spaces.
+
+COUNT defaults to `py-indent-offset',
+use \[universal-argument] to specify a different value.
+
+Returns outmost indentation reached. "
+  (interactive "*P")
+  (let ((erg (py--shift-forms-base "def" (- (or arg py-indent-offset)))))
     (when (called-interactively-p 'any) (message "%s" erg))
     erg))
 
@@ -288,27 +263,99 @@ Returns outmost indentation reached. "
     (when (called-interactively-p 'any) (message "%s" erg))
     erg))
 
-(defun py-shift-line-right (&optional arg)
-  "Indent line by COUNT spaces.
+(defun py-shift-indent-right (&optional arg)
+  "Indent indent by COUNT spaces.
 
 COUNT defaults to `py-indent-offset',
 use \[universal-argument] to specify a different value.
 
 Returns outmost indentation reached. "
   (interactive "*P")
-  (let ((erg (py--shift-forms-base "line" (or arg py-indent-offset))))
+  (let ((erg (py--shift-forms-base "indent" (or arg py-indent-offset))))
         (when (called-interactively-p 'any) (message "%s" erg))
     erg))
 
-(defun py-shift-line-left (&optional arg)
-  "Dedent line by COUNT spaces.
+(defun py-shift-indent-left (&optional arg)
+  "Dedent indent by COUNT spaces.
 
 COUNT defaults to `py-indent-offset',
 use \[universal-argument] to specify a different value.
 
 Returns outmost indentation reached. "
   (interactive "*P")
-  (let ((erg (py--shift-forms-base "line" (- (or arg py-indent-offset)))))
+  (let ((erg (py--shift-forms-base "indent" (- (or arg py-indent-offset)))))
+    (when (called-interactively-p 'any) (message "%s" erg))
+    erg))
+
+(defun py-shift-minor-block-right (&optional arg)
+  "Indent minor-block by COUNT spaces.
+
+COUNT defaults to `py-indent-offset',
+use \[universal-argument] to specify a different value.
+
+Returns outmost indentation reached. "
+  (interactive "*P")
+  (let ((erg (py--shift-forms-base "minor-block" (or arg py-indent-offset))))
+        (when (called-interactively-p 'any) (message "%s" erg))
+    erg))
+
+(defun py-shift-minor-block-left (&optional arg)
+  "Dedent minor-block by COUNT spaces.
+
+COUNT defaults to `py-indent-offset',
+use \[universal-argument] to specify a different value.
+
+Returns outmost indentation reached. "
+  (interactive "*P")
+  (let ((erg (py--shift-forms-base "minor-block" (- (or arg py-indent-offset)))))
+    (when (called-interactively-p 'any) (message "%s" erg))
+    erg))
+
+(defun py-shift-paragraph-right (&optional arg)
+  "Indent paragraph by COUNT spaces.
+
+COUNT defaults to `py-indent-offset',
+use \[universal-argument] to specify a different value.
+
+Returns outmost indentation reached. "
+  (interactive "*P")
+  (let ((erg (py--shift-forms-base "paragraph" (or arg py-indent-offset))))
+        (when (called-interactively-p 'any) (message "%s" erg))
+    erg))
+
+(defun py-shift-paragraph-left (&optional arg)
+  "Dedent paragraph by COUNT spaces.
+
+COUNT defaults to `py-indent-offset',
+use \[universal-argument] to specify a different value.
+
+Returns outmost indentation reached. "
+  (interactive "*P")
+  (let ((erg (py--shift-forms-base "paragraph" (- (or arg py-indent-offset)))))
+    (when (called-interactively-p 'any) (message "%s" erg))
+    erg))
+
+(defun py-shift-region-right (&optional arg)
+  "Indent region by COUNT spaces.
+
+COUNT defaults to `py-indent-offset',
+use \[universal-argument] to specify a different value.
+
+Returns outmost indentation reached. "
+  (interactive "*P")
+  (let ((erg (py--shift-forms-base "region" (or arg py-indent-offset))))
+        (when (called-interactively-p 'any) (message "%s" erg))
+    erg))
+
+(defun py-shift-region-left (&optional arg)
+  "Dedent region by COUNT spaces.
+
+COUNT defaults to `py-indent-offset',
+use \[universal-argument] to specify a different value.
+
+Returns outmost indentation reached. "
+  (interactive "*P")
+  (let ((erg (py--shift-forms-base "region" (- (or arg py-indent-offset)))))
     (when (called-interactively-p 'any) (message "%s" erg))
     erg))
 
@@ -336,5 +383,30 @@ Returns outmost indentation reached. "
     (when (called-interactively-p 'any) (message "%s" erg))
     erg))
 
+(defun py-shift-top-level-right (&optional arg)
+  "Indent top-level by COUNT spaces.
+
+COUNT defaults to `py-indent-offset',
+use \[universal-argument] to specify a different value.
+
+Returns outmost indentation reached. "
+  (interactive "*P")
+  (let ((erg (py--shift-forms-base "top-level" (or arg py-indent-offset))))
+        (when (called-interactively-p 'any) (message "%s" erg))
+    erg))
+
+(defun py-shift-top-level-left (&optional arg)
+  "Dedent top-level by COUNT spaces.
+
+COUNT defaults to `py-indent-offset',
+use \[universal-argument] to specify a different value.
+
+Returns outmost indentation reached. "
+  (interactive "*P")
+  (let ((erg (py--shift-forms-base "top-level" (- (or arg py-indent-offset)))))
+    (when (called-interactively-p 'any) (message "%s" erg))
+    erg))
+
 (provide 'python-components-shift-forms)
 ;;; python-components-shift-forms.el ends here
+ 
